Added choice of adding religion into syllabus and merging religion to the weeks

--- a/templates/SyllabusScheduleMaker.html
+++ b/templates/SyllabusScheduleMaker.html
@@ -140,7 +140,18 @@
                                         </select>
                                     </label>
                                 </div>
-
+                                <div class="addBlock">
+                                    <div class="checkBoxes">
+                                        <label for = "religionCheck">Include Religion to Syllabus: </label>
+                                        <input type="checkbox" class= "checkReligion" name="includeReligion" id = "religionCheck" value=True >
+                                    </div>
+                                </div>
+                                <div class="addBlock" id = "contentDisabled">
+                                    <div class="checkBoxes">
+                                        <label for = "mergeReligion">&emsp;Merge Religion to Syllabus Weeks: </label>
+                                        <input type="checkbox" class= "mergeReligion" name="mergeReligion" id = "mergeReligion" value=True disabled>
+                                    </div>
+                                </div>
                             </div>
                         <button type="submit" class = "subButton"></button>
 
