Included some Line Spacing and make it more clearer for user side

--- a/templates/SyllabusScheduleMaker.html
+++ b/templates/SyllabusScheduleMaker.html
@@ -63,7 +63,7 @@
 
                                 </p>
 
-                            </div>
+                            </div><br><br>
 
 
                         </label>
@@ -103,6 +103,7 @@
                             </div>
                         </div>-->
                         <h2>Course Meeting Days</h2>
+                            <p>*You must select at least One</p>
                             <p id="validate" style="color: #E8474C; display: none">*Check At Least One</p>
                             <div class="checkBoxes">
                                 <input type="checkbox" class= "meet" name="meetings" id = "monday" value="0" >
@@ -119,7 +120,7 @@
 
                                 <input type="checkbox" class= "meet" name="meetings" id = "friday" value="4" >
                                 <label for = "friday">Friday</label>
-                            </div>
+                            </div><br><br>
 
 
                         <h2>Additional Options</h2>
@@ -139,7 +140,7 @@
                                 <div class="addBlock">
                                     <div class="checkBoxes" style="color: #9e9e9e">
                                         <label for = "academicCheck">Include Academic Calendar: </label>
-                                        <input type="checkbox" class= "checkAcademic" name="includeAcademic" id = "academicCheck" value=True disabled >
+                                        <input type="checkbox" class= "checkAcademic" name="includeAcademic" id = "academicCheck" value=True disabled checked>
                                     </div>
                                 </div>
 
