Included some Line Spacing and make it more clearer for user side

--- a/templates/SyllabusScheduleMaker.html
+++ b/templates/SyllabusScheduleMaker.html
@@ -104,7 +104,7 @@
                         </div>-->
                         <h2>Course Meeting Days</h2>
                             <p>*You must select at least One</p>
-                            <p id="validate" style="color: #E8474C; display: none">*Check At Least One</p>
+                            <p id="validate" style="color: #e8474c; display: none">*Check At Least One</p>
                             <div class="checkBoxes">
                                 <input type="checkbox" class= "meet" name="meetings" id = "monday" value="0" >
                                 <label for = "monday">Monday</label>
